# cmpe458-project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  compiler  phase2.md
documentation/: README.md  ast_structure.md  context_free_grammer.md  error_code.md  error_handling.md  grammar.md  grammar_rules.md  test_cases.md
include/: lexer.h  parser.h  semantic.h  tokens.h
phase1-w25/documentation/: README.md  context_free_grammer.md  error_code.md  grammar.md
phase1-w25/include/: tokens.h
phase1-w25/src/lexer/: lexer.c
phase2-w25/include/: cfg.h  lexer.h  parser.h
phase2-w25/lexer/: lexer.c
phase2-w25/parser/: lex-pars.c  lex-pars.h
src/: lexer.c  main.c  parser.c
src/lexer/: lexer.c
src/parser/: parser.c
src/semantic/: semantic.c
test/: floats.txt  input_assign.txt  input_correct_par.txt  input_invalid.txt  input_valid.txt  phase3.txt  precedence.txt
